# ESP32Libs

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
build_advise/: espidf_source.bat  idf.bat  stack trace decode hint.txt
main/: CMakeLists.txt  app_main.cpp
main/analog/inc/: adc_reader.h  analog_monitor.h  analog_reader.h  analog_writer_dac.h  analog_writer_pwm.h  dac_output.h  pwm_output.h
main/analog/src/: adc_reader.cpp  analog_monitor.cpp  analog_reader.cpp  analog_writer_dac.cpp  analog_writer_pwm.cpp  dac_output.cpp  pwm_output.cpp
main/comm/inc/: ble_server.h  ble_spp_server.h  ble_spp_server_demo.h  bt_classic_spp.h  i2c_driver.h  i_comm_driver.h  nimble_server.h  wifi_ap_tcp_server.h  wifi_tcp_server.h
main/comm/src/: ble_server.cpp  ble_spp_server.cpp  ble_spp_server_demo.cpp  bt_classic_spp.cpp  i2c_driver.cpp  nimble_server.cpp  wifi_ap_tcp_server.cpp  wifi_tcp_server.cpp
main/control/inc/: pid.h  ramp.h  sequence.h  three_pos.h  two_pos.h
main/control/src/: pid.cpp  ramp.cpp  sequence.cpp  three_pos.cpp  two_pos.cpp
main/discrete/inc/: coil.h  i_switch.h  programm_coil.h  rf_impulse.h  simple_input.h  simple_input_delayed.h
main/discrete/src/: coil.cpp  program_coil.cpp  programm_coil.cpp  rf_impulse.cpp  simple_input.cpp  simple_input_delayed.cpp
main/misc/inc/: array_list.h  common.h  result.h  scale.h  string_map.h
main/misc/src/: result.cpp
main/observe/inc/: counter.h  monitor.h  moving_avg.h
main/observe/src/: monitor.cpp  moving_avg.cpp
main/sensors/inc/: shtc3.h
main/sensors/src/: shtc3.cpp
main/tasks/inc/: task_common.h
main/tasks/src/: test_task.cpp
main/timer/inc/: common_timer.h  off_delay.h  on_delay.h  pulse.h  updater.h
main/timer/src/: common_timer.cpp  off_delay.cpp  on_delay.cpp  pulse.cpp  updater.cpp
