idf_component_register(
        SRCS
        "app_main.cpp"
        "analog/src/adc_reader.cpp"
        "analog/src/analog_monitor.cpp"
        "analog/src/analog_reader.cpp"
        "analog/src/analog_writer_dac.cpp"
        "analog/src/analog_writer_pwm.cpp"
        "analog/src/dac_output.cpp"
        "analog/src/pwm_output.cpp"
        "comm/src/ble_spp_server.cpp"
        "comm/src/i2c_driver.cpp"
        "comm/src/nimble_server.cpp"
        "comm/src/wifi_ap_tcp_server.cpp"
        "control/src/pid.cpp"
        "control/src/ramp.cpp"
        "control/src/sequence.cpp"
        "control/src/three_pos.cpp"
        "control/src/two_pos.cpp"
        "discrete/src/coil.cpp"
        "discrete/src/program_coil.cpp"
        "discrete/src/rf_impulse.cpp"
        "discrete/src/simple_input.cpp"
        "discrete/src/simple_input_delayed.cpp"
        "misc/src/array_fun.cpp"
        "misc/src/math_fun.cpp"
        "observe/src/counter.cpp"
        "observe/src/monitor.cpp"
        "observe/src/moving_avg.cpp"
        "sensors/src/shtc3.cpp"
        "tasks/src/test_task.cpp"
        "timer/src/common_timer.cpp"
        "timer/src/on_delay.cpp"
        "timer/src/off_delay.cpp"
        "timer/src/pulse.cpp"
        "timer/src/updater.cpp"

        PRIV_REQUIRES
        spi_flash
        bt
        esp_driver_dac
        esp_driver_gpio
        esp_driver_gptimer
        esp_driver_i2c
        esp_wifi
        esp_event
        nvs_flash
        esp_netif
        esp_partition
        esp_adc
        esp_driver_ledc
        esp_driver_uart

        INCLUDE_DIRS
        "analog/inc"
        "comm/inc"
        "control/inc"
        "discrete/inc"
        "misc/inc"
        "observe/inc"
        "sensors/inc"
        "tasks/inc"
        "timer/inc"
)
